--- a/Explore/Versioned_Project_Renamed/.Versioned_Project_Renamed.Project.json
+++ b/Explore/Versioned_Project_Renamed/.Versioned_Project_Renamed.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "0OdVXpLML4CfCqatYqOPM1",
-    "name" : "Versioned_Project",
+    "name" : "Versioned_Project_Renamed",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2023-08-21T00:09:06.473Z",
+  "updateTime" : "2023-08-21T00:10:39.336Z",
   "objectRefs" : [ ]
 }
