--- a/Explore/Versioned_Project/.Versioned_Project.Project.json
+++ b/Explore/Versioned_Project/.Versioned_Project.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "0OdVXpLML4CfCqatYqOPM1",
-    "name" : "Versioned_Project_Renamed",
+    "name" : "Versioned_Project",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2023-08-21T00:10:39.336Z",
+  "updateTime" : "2023-08-21T00:10:44.810Z",
   "objectRefs" : [ ]
 }
